#167719 - Integrated V3 launcher enhanced to use jvm-config classpath attributes.  Related refactorings.