@@ -1,4 +1,3 @@
-// <editor-fold defaultstate="collapsed" desc=" License Header ">
 /*
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.
  *
@@ -39,38 +38,46 @@
  * Version 2 license, then the option applies only if the new code is
  * made subject to such option by the copyright holder.
  */
-// </editor-fold>
 
 package org.netbeans.modules.glassfish.common;
 
 import java.io.File;
+import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.ServerSocket;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
+import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
+import java.util.Map.Entry;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.TimeoutException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
+import javax.swing.SwingUtilities;
+import org.netbeans.modules.glassfish.spi.RegisteredDerbyServer;
 import org.netbeans.modules.glassfish.spi.GlassfishModule;
 import org.netbeans.modules.glassfish.spi.GlassfishModule.OperationState;
 import org.netbeans.modules.glassfish.spi.OperationStateListener;
 import org.netbeans.modules.glassfish.spi.Recognizer;
+import org.netbeans.modules.glassfish.spi.ServerCommand.GetPropertyCommand;
+import org.netbeans.modules.glassfish.spi.ServerCommand.SetPropertyCommand;
 import org.netbeans.modules.glassfish.spi.ServerUtilities;
 import org.netbeans.modules.glassfish.spi.TreeParser;
 import org.openide.DialogDisplayer;
-import org.openide.ErrorManager;
 import org.openide.NotifyDescriptor;
 import org.openide.execution.NbProcessDescriptor;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
+import org.openide.util.Lookup;
 import org.openide.util.NbBundle;
-import org.xml.sax.Attributes;
-import org.xml.sax.SAXException;
+import org.openide.util.RequestProcessor;
+import org.openide.util.Utilities;
 
 
 /**
@@ -78,6 +85,8 @@ import org.xml.sax.SAXException;
  * @author Peter Williams
  */
 public class StartTask extends BasicTask<OperationState> {
+
+    private static final String MAIN_CLASS = "com.sun.enterprise.glassfish.bootstrap.ASMain"; // NOI18N
 
     private final CommonServerSupport support;
     private List<Recognizer> recognizers;
@@ -103,9 +112,53 @@ public class StartTask extends BasicTask<OperationState> {
      * @param jvmArgs used for starting in profile mode
      * @param stateListener state monitor to track start progress
      */
-    public StartTask(CommonServerSupport support, List<Recognizer> recognizers,
+    public StartTask(final CommonServerSupport support, List<Recognizer> recognizers,
             FileObject jdkRoot, String[] jvmArgs, OperationStateListener... stateListener) {
         super(support.getInstanceProperties(), stateListener);
+        List<OperationStateListener> listeners = new ArrayList<OperationStateListener>();
+        listeners.addAll(Arrays.asList(stateListener));
+        listeners.add(new OperationStateListener() {
+            public void operationStateChanged(OperationState newState, String message) {
+                if (OperationState.COMPLETED.equals(newState)) {
+                RequestProcessor.getDefault().post(new Runnable() {
+
+                    public void run() {
+                        GetPropertyCommand gpc = new GetPropertyCommand("*.enable-comet-support");
+                        Future<OperationState> result = support.execute(gpc);
+                                //((GlassfishModule) si.getBasicNode().getLookup().lookup(GlassfishModule.class)).execute(gpc);
+                        try {
+                            if (result.get(10, TimeUnit.SECONDS) == OperationState.COMPLETED) {
+                                Map<String, String> retVal = gpc.getData();
+                                String newValue = support.getInstanceProperties().get(GlassfishModule.COMET_FLAG);
+                                if (null == newValue || newValue.trim().length() < 1) {
+                                    newValue = "false";
+                                }
+                                for (Entry<String,String> entry : retVal.entrySet()) {
+                                    String key = entry.getKey();
+                                    // do not update the admin listener....
+                                    if (null != key && !key.contains("admin-listener")) {
+                                        SetPropertyCommand spc = new SetPropertyCommand(key,newValue);
+                                        Future<OperationState> results = support.execute(spc);
+                                            //((GlassfishModule) si.getBasicNode().getLookup().lookup(GlassfishModule.class)).execute(gpc);
+                                        results.get(10, TimeUnit.SECONDS);
+                                    }
+                                }
+                            }
+                        } catch (InterruptedException ex) {
+                            Logger.getLogger("glassfish").log(Level.INFO, null, ex); // NOI18N
+                        } catch (ExecutionException ex) {
+                            Logger.getLogger("glassfish").log(Level.INFO, null, ex); // NOI18N
+                        } catch (TimeoutException ex) {
+                            Logger.getLogger("glassfish").log(Level.INFO, null, ex); // NOI18N
+                        }
+                    }
+                });
+                    // attempt to sync the comet support
+                }
+            }
+
+        });
+        this.stateListener = listeners.toArray(new OperationStateListener[listeners.size()]);
         this.support = support;
         this.recognizers = recognizers;
         this.jdkHome = jdkRoot;
@@ -114,7 +167,7 @@ public class StartTask extends BasicTask<OperationState> {
     
     private static String [] removeEscapes(String [] args) {
         for(int i = 0; i < args.length; i++) {
-            args[i] = args[i].replace("\\\"", "");
+            args[i] = args[i].replace("\\\"", ""); // NOI18N
         }
         return args;
     }
@@ -125,11 +178,10 @@ public class StartTask extends BasicTask<OperationState> {
     public OperationState call() {
         // Save the current time so that we can deduct that the startup
         // Failed due to timeout
-        Logger.getLogger("glassfish").log(Level.FINEST, 
-                "StartTask.call() called on thread \"" + Thread.currentThread().getName() + "\"");
+        Logger.getLogger("glassfish").log(Level.FINEST, "StartTask.call() called on thread \"" + Thread.currentThread().getName() + "\""); // NOI18N
         long start = System.currentTimeMillis();
 
-        String host = null;
+        String host;
         int port = 0;
         
         host = ip.get(GlassfishModule.HOSTNAME_ATTR);
@@ -138,31 +190,37 @@ public class StartTask extends BasicTask<OperationState> {
                     "MSG_START_SERVER_FAILED_NOHOST", instanceName); //NOI18N
         }
                
+        Process serverProcess;
         try {
             port = Integer.valueOf(ip.get(GlassfishModule.HTTPPORT_ATTR));
             if(port < 0 || port > 65535) {
                 return fireOperationStateChanged(OperationState.FAILED, 
                         "MSG_START_SERVER_FAILED_BADPORT", instanceName); //NOI18N
             }
-        } catch(NumberFormatException ex) {
-            return fireOperationStateChanged(OperationState.FAILED, 
-                    "MSG_START_SERVER_FAILED_BADPORT", instanceName); //NOI18N
-        }
-        
-        Process serverProcess = null;
-        try {
+
+            jdkHome = getJavaPlatformRoot(support);
+            // lookup the javadb start service and use it here.
+            RegisteredDerbyServer db = Lookup.getDefault().lookup(RegisteredDerbyServer.class);
+            if (null != db && "true".equals(ip.get(GlassfishModule.START_DERBY_FLAG))) { // NOI18N
+                db.start();
+            }
             serverProcess = createProcess();
-        } catch (IOException ex) {
-            fireOperationStateChanged(OperationState.FAILED, 
+        } catch (NumberFormatException nfe) {
+            Logger.getLogger("glassfish").log(Level.INFO, ip.get(GlassfishModule.HTTPPORT_ATTR), nfe); // NOI18N
+            return fireOperationStateChanged(OperationState.FAILED,
                     "MSG_START_SERVER_FAILED_BADPORT", instanceName); //NOI18N
-        }
-        if (serverProcess == null) {
-            // failed event already sent...
-            return OperationState.FAILED;
+        } catch (IOException ex) {
+            Logger.getLogger("glassfish").log(Level.INFO, null, ex); // NOI18N
+            return fireOperationStateChanged(OperationState.FAILED, "MSG_PASS_THROUGH",
+                    ex.getLocalizedMessage());
+        } catch (ProcessCreationException ex) {
+            Logger.getLogger("glassfish").log(Level.INFO, null, ex); // NOI18N
+            return fireOperationStateChanged(OperationState.FAILED, "MSG_PASS_THROUGH",
+                    ex.getLocalizedMessage());
         }
 
         fireOperationStateChanged(OperationState.RUNNING, 
-                "MSG_START_SERVER_IN_PROGRESS", instanceName);
+                "MSG_START_SERVER_IN_PROGRESS", instanceName); // NOI18N
         
         // create a logger to the server's output stream so that a user
         // can observe the progress
@@ -186,46 +244,63 @@ public class StartTask extends BasicTask<OperationState> {
             }
 
             if(httpLive) {
-                Logger.getLogger("glassfish").log(Level.FINE, "Server HTTP is live.");
+                Logger.getLogger("glassfish").log(Level.FINE, "Server HTTP is live."); // NOI18N
                 OperationState state = OperationState.COMPLETED;
-                String messageKey = "MSG_SERVER_STARTED";
+                String messageKey = "MSG_SERVER_STARTED"; // NOI18N
                 if (!support.isReady(true)) {
                     state = OperationState.FAILED;
-                    messageKey = "MSG_START_SERVER_FAILED";
+                    messageKey = "MSG_START_SERVER_FAILED"; // NOI18N
                 }
-                return fireOperationStateChanged(state,
-                        messageKey, instanceName); // NOI18N
+                return fireOperationStateChanged(state, messageKey, instanceName);
             }
             
             // if we are profiling, we need to lie about the status?
             if (null != jvmArgs) {
-                return fireOperationStateChanged(OperationState.COMPLETED, 
+                // try to sync the states after the profiler attaches
+                RequestProcessor.getDefault().post(new Runnable () {
+
+                    public void run() {
+                        while (!CommonServerSupport.isRunning(support.getHostName(), support.getHttpPortNumber())) {
+                            try {
+                                Thread.sleep(200);
+                            } catch (InterruptedException ex) {
+                                //Exceptions.printStackTrace(ex);
+                            }
+                        }
+                        SwingUtilities.invokeLater(new Runnable() {
+
+                            public void run() {
+                                    support.refresh();
+                                                    
+                            }
+
+                        });
+                    }
+                });
+                return fireOperationStateChanged(OperationState.COMPLETED,
                         "MSG_SERVER_STARTED", instanceName); // NOI18N
             }
         }
         
         // If the server did not start in the designated time limits
         // We consider the startup as failed and warn the user
-        Logger.getLogger("glassfish").log(Level.FINE, 
-                "V3 Failed to start, killing process: " + serverProcess);
+        Logger.getLogger("glassfish").log(Level.FINE, "V3 Failed to start, killing process: " + serverProcess); // NOI18N
         serverProcess.destroy();
-        fireOperationStateChanged(OperationState.FAILED, 
-                "MSG_START_SERVER_FAILED", instanceName);
-        return OperationState.FAILED;
+        return fireOperationStateChanged(OperationState.FAILED,
+                "MSG_START_SERVER_FAILED", instanceName); // NOI18N
     }
 
     private String[] createEnvironment() {
         List<String> envp = new ArrayList<String>();
         String localJdkHome = getJdkHome();
         if(localJdkHome != null) {
-            String javaEnv = "JAVA_HOME=" + localJdkHome;
+            String javaEnv = "JAVA_HOME=" + localJdkHome; // NOI18N
             envp.add(javaEnv); // NOI18N
-            Logger.getLogger("glassfish").log(Level.FINE, "V3 Environment: " + javaEnv);
         } else {
-            Logger.getLogger("glassfish").log(Level.WARNING, "Unable to set JAVA_HOME for GlassFish V3 enviroment.");
+            Logger.getLogger("glassfish").log(Level.WARNING, "Unable to set JAVA_HOME for GlassFish V3 enviroment."); // NOI18N
         }
         Locale currentLocale = Locale.getDefault();
-        if (currentLocale.equals(new Locale("tr","TR"))) {
+        if (currentLocale.equals(new Locale("tr","TR"))) { // NOI18N
             // the server is just plain broken when run in a Turkish locale, so
             // we need to start it in en_US
             envp.add("LANG=en_US");  // NOI18N
@@ -234,96 +309,210 @@ public class StartTask extends BasicTask<OperationState> {
             NotifyDescriptor nd = new NotifyDescriptor.Message(message);
             DialogDisplayer.getDefault().notifyLater(nd);
         }
-        return (String[]) envp.toArray(new String[envp.size()]);
+        appendSystemEnvVar(envp, GlassfishModule.GEM_HOME);
+        appendSystemEnvVar(envp, GlassfishModule.GEM_PATH);
+        Logger logger = Logger.getLogger("glassfish"); // NOI18N
+        if(logger.isLoggable(Level.FINE)) {
+            String logmsg = "V3 Environment: "; // NOI18N
+            for(String var: envp) {
+                logmsg += var;
+                logmsg += " "; // NOI18N
+            }
+            logger.log(Level.FINE, logmsg);
+        }
+        return envp.toArray(new String[envp.size()]);
+    }
+    
+    private void appendSystemEnvVar(List<String> envp, String key) {
+        String value = ip.get(key);
+        if(value != null && value.length() > 0) {
+            envp.add(key + "=" + value); // NOI18N
+        }
+    }
+
+    private FileObject getJavaPlatformRoot(CommonServerSupport support) throws IOException {
+        FileObject retVal;
+        String javaInstall = support.getInstanceProperties().get(GlassfishModule.JAVA_PLATFORM_ATTR);
+        if (null == javaInstall || javaInstall.trim().length() < 1) {
+            File dir = new File(getJdkHome());
+            retVal = FileUtil.createFolder(FileUtil.normalizeFile(dir));
+        } else {
+            File f = new File(javaInstall);
+            if (f.exists()) {
+                //              bin             home
+                File dir = f.getParentFile().getParentFile();
+                retVal = FileUtil.createFolder(FileUtil.normalizeFile(dir));
+            } else {
+                throw new FileNotFoundException(NbBundle.getMessage(StartTask.class, "MSG_INVALID_JAVA", instanceName, javaInstall)); // NOI18N
+            }
+        }
+        return retVal;
     }
     
     private String getJdkHome() {
-        String result = null;
+        String result;
         if (null != jdkHome) {
             result = FileUtil.toFile(jdkHome).getAbsolutePath();
         } else {
-            String localJdkHome = System.getProperty("jdk.home");       // NOI18N
-            if (localJdkHome == null || localJdkHome.length() == 0) {
-                String javaHome = System.getProperty("java.home");      // NOI18N
-                if (javaHome.endsWith(File.separatorChar + "jre")) {    // NOI18N
-                    result = javaHome.substring(javaHome.length() - 4);
-                }
-            } else {
-                result = localJdkHome;
+            result = System.getProperty("java.home");      // NOI18N
+            if (result.endsWith(File.separatorChar + "jre")) {    // NOI18N
+                result = result.substring(0,result.length() - 4);
             }
         }
         return result;
     }
     
-    private NbProcessDescriptor createProcessDescriptor() throws IOException {
-        String startScript;
-        if (null == jdkHome) {
-           startScript = System.getProperty("java.home") +        
-                File.separatorChar + "bin" + File.separatorChar + "java";
-        } else {
-            startScript = FileUtil.toFile(jdkHome).getAbsolutePath() +
-                File.separatorChar + "bin" + File.separatorChar + "java";
+    private NbProcessDescriptor createProcessDescriptor() throws ProcessCreationException { 
+        String startScript = FileUtil.toFile(jdkHome).getAbsolutePath() +
+                File.separatorChar + "bin" + File.separatorChar + "java"; // NOI18N
+        if (Utilities.isWindows()) {
+            startScript += ".exe"; // NOI18N
+        }
+        File ss = new File(startScript);
+        if (!ss.exists()) {
+            throw new ProcessCreationException(null, "MSG_INVALID_JAVA", instanceName, startScript); // NOI18N
+        }
+        if (support.getInstanceProvider().requiresJdk6OrHigher() && !Util.appearsToBeJdk6OrBetter(ss)) {
+            throw new ProcessCreationException(null, "MSG_START_SERVER_FAILED_JDK_ERROR", instanceName); // NOI18N
         }
         String serverHome = ip.get(GlassfishModule.GLASSFISH_FOLDER_ATTR);
-        File jar = ServerUtilities.getJarName(serverHome, ServerUtilities.GFV3_JAR_MATCHER);
-        if(jar == null) {
-            fireOperationStateChanged(OperationState.FAILED, "MSG_START_SERVER_FAILED_FNF"); // NOI18N
-            return null;
+        File bootstrapJar = ServerUtilities.getJarName(serverHome, ServerUtilities.GFV3_JAR_MATCHER);
+        if(bootstrapJar == null) {
+            throw new ProcessCreationException(null, "MSG_START_SERVER_FAILED_FNF"); // NOI18N
         }
-        String jarLocation = jar.getAbsolutePath();
-        
+
+        File domainDir = getDomainFolder();
         List<String> optList = new ArrayList<String>(10);
         Map<String, String> argMap = new HashMap<String, String>();
-        readJvmArgs(getDomainFolder(), optList, argMap);
+        Map<String, String> propMap = new HashMap<String, String>();
+        readJvmArgs(domainDir, optList, argMap, propMap);
         
         if (null != jvmArgs) {
             optList.addAll(jvmArgs);
         }
-        
+
         StringBuilder argumentBuf = new StringBuilder(1024);
+        String classpath = computeClassPath(propMap, domainDir, bootstrapJar);
+        if(classpath != null) {
+            argumentBuf.append("-cp "); // NOI18N
+            argumentBuf.append(classpath);
+        }
         appendSystemVars(argMap, argumentBuf);
         appendJavaOpts(optList, argumentBuf);
 
-        argumentBuf.append(" -client -jar ");
-        argumentBuf.append(quote(jarLocation));
-        argumentBuf.append(" --domain " + getDomainName());
-        argumentBuf.append(" --domaindir " + quote(getDomainFolder().getAbsolutePath()));
+        if(classpath != null) {
+            argumentBuf.append(" ");
+            argumentBuf.append(MAIN_CLASS);
+        } else {
+            argumentBuf.append(" -jar "); // NOI18N
+            argumentBuf.append(Util.quote(bootstrapJar.getAbsolutePath()));
+        }
+        argumentBuf.append(" --domain " + getDomainName()); // NOI18N
+        argumentBuf.append(" --domaindir " + Util.quote(domainDir.getAbsolutePath())); // NOI18N
         
         String arguments = argumentBuf.toString();
-        Logger.getLogger("glassfish").log(Level.FINE, "V3 JVM Command: " + startScript + arguments);
-        return new NbProcessDescriptor(startScript, arguments); // NOI18N
+        Logger.getLogger("glassfish").log(Level.FINE, "V3 JVM Command: " + startScript + " " + arguments); // NOI18N
+        return new NbProcessDescriptor(startScript, arguments);
     }
-    
-    // quote the string if it contains spaces.  Might want to expand to all
-    // white space (tabs, localized white space, etc.)
-    private static final String quote(String path) {
-        return path.indexOf(' ') == -1 ? path : "\"" + path + "\"";
-    }
-    
-    private StringBuilder appendJavaOpts(List<String> optList, StringBuilder argumentBuf) throws IOException {
-        for(String option: optList) {
-            argumentBuf.append(' ');
-            argumentBuf.append(option);
-        }
 
-        if(GlassfishModule.DEBUG_MODE.equals(ip.get(GlassfishModule.JVM_MODE))) {
-//            javaOpts.append(" -classic -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,address="). // NOI18N
-            try {
-                int debugPort = 8787;
-                // calculate the port and save it.
-                ServerSocket t = new ServerSocket(0);
-                debugPort = t.getLocalPort();
-                String debugPortString = Integer.toString(debugPort);
+    private String computeClassPath(Map<String, String> propMap, File domainDir, File bootstrapJar) {
+        String result = null;
+        List<File> prefixCP = Util.classPathToFileList(propMap.get("classpath-prefix"), domainDir); // NOI18N
+        List<File> suffixCP = Util.classPathToFileList(propMap.get("classpath-suffix"), domainDir); // NOI18N
+        boolean useEnvCP = "false".equals(propMap.get("env-classpath-ignored")); // NOI18N
+        List<File> envCP = Util.classPathToFileList(useEnvCP ? System.getenv("CLASSPATH") : null, domainDir); // NOI18N
+        List<File> systemCP = Util.classPathToFileList(propMap.get("system-classpath"), domainDir); // NOI18N
+
+        if(prefixCP.size() > 0 || suffixCP.size() > 0 || envCP.size() > 0 || systemCP.size() > 0) {
+            List<File> mainCP = Util.classPathToFileList(bootstrapJar.getAbsolutePath(), null);
+
+            if(mainCP.size() > 0) {
+                List<File> completeCP = new ArrayList<File>(32);
+                completeCP.addAll(prefixCP);
+                completeCP.addAll(mainCP);
+                completeCP.addAll(systemCP);
+                completeCP.addAll(envCP);
+                completeCP.addAll(suffixCP);
+
+                // Build classpath in proper order - prefix / main / system / environment / suffix
+                // Note that completeCP should always have at least 2 elements at
+                // this point (1 from mainCP and 1 from some other CP modifier)
+                StringBuilder classPath = new StringBuilder(1024);
+                Iterator<File> iter = completeCP.iterator();
+                classPath.append(Util.quote(iter.next().getPath()));
+                while(iter.hasNext()) {
+                    classPath.append(File.pathSeparatorChar);
+                    classPath.append(Util.quote(iter.next().getPath()));
+                }
+                result = classPath.toString();
+            } else {
+                Logger.getLogger("glassfish").log(Level.WARNING, // NOI18N
+                        "Unable to read main classpath from glassfish main jar when building launch classpath."); // NOI18N
+            }
+        }
+        return result;
+    }
+
+    private StringBuilder appendJavaOpts(List<String> optList, StringBuilder argumentBuf)
+            throws ProcessCreationException {
+        String debugPortString = ""; // NOI18N
+        try {
+            for (String option : optList) {
+                argumentBuf.append(' ');
+                argumentBuf.append(option);
+            }
+
+            if (GlassfishModule.DEBUG_MODE.equals(ip.get(GlassfishModule.JVM_MODE))) {
+//            javaOpts.append(" -classic -Xdebug -Xnoagent -Djava.compiler=NONE
+//                -Xrunjdwp:transport=dt_socket,address="). // NOI18N
+                debugPortString = ip.get(GlassfishModule.DEBUG_PORT);
+                String debugTransport = "dt_socket"; // NOI18N
+                if ("true".equals(ip.get(GlassfishModule.USE_SHARED_MEM_ATTR))) { // NOI18N
+                    debugTransport = "dt_shmem";  // NOI18N
+                } else {
+                    int t = 0;
+                    if (null != debugPortString && debugPortString.trim().length() > 0) {
+                        t = Integer.parseInt(debugPortString);
+                        if(t < 0 || t > 65535) {
+                            throw new NumberFormatException();
+                        }
+                    }
+                }
+                //try {
+                if (null == debugPortString || "".equals(debugPortString)) {
+                    if ("true".equals(ip.get(GlassfishModule.USE_SHARED_MEM_ATTR))) { // NOI18N
+                        debugPortString = Integer.toString(
+                                Math.abs((ip.get(GlassfishModule.GLASSFISH_FOLDER_ATTR) +
+                                ip.get(GlassfishModule.DOMAINS_FOLDER_ATTR) +
+                                ip.get(GlassfishModule.DOMAIN_NAME_ATTR)).hashCode() + 1));
+                    } else {
+                        int debugPort = 8787;
+                        // calculate the port and save it.
+                        ServerSocket t = null;
+                        try {
+                            t = new ServerSocket(0);
+                            debugPort = t.getLocalPort();
+                            debugPortString = Integer.toString(debugPort);
+                        } finally {
+                            if (null != t) {
+                                t.close();
+                            }
+                        }
+                    }
+                } 
                 support.setEnvironmentProperty(GlassfishModule.DEBUG_PORT, debugPortString, true);
-                argumentBuf.append(" -Xdebug -Xrunjdwp:transport=dt_socket,address="); // NOI18N
+                argumentBuf.append(" -Xdebug -Xrunjdwp:transport="); // NOI18N
+                argumentBuf.append(debugTransport);
+                argumentBuf.append(",address="); // NOI18N
                 argumentBuf.append(debugPortString);
                 argumentBuf.append(",server=y,suspend=n"); // NOI18N
-                t.close();
-            } catch (IOException ioe) {
-                Logger.getLogger("glassfish").log(Level.FINE, "Could not get a socket for debugging",ioe);
-                fireOperationStateChanged(OperationState.FAILED,
-                    "MSG_START_SERVER_FAILED_BADPORT", instanceName); //NOI18N                throw ioe;
             }
+        } catch (NumberFormatException nfe) {
+            throw new ProcessCreationException(nfe,
+                    "MSG_START_SERVER_FAILED_INVALIDPORT", instanceName, debugPortString); //NOI18N
+        } catch (IOException ioe) {
+            throw new ProcessCreationException(ioe,
+                    "MSG_START_SERVER_FAILED_INVALIDPORT", instanceName, debugPortString); //NOI18N
         }
         return argumentBuf;
     }
@@ -332,13 +521,34 @@ public class StartTask extends BasicTask<OperationState> {
         appendSystemVar(argumentBuf, GlassfishModule.JRUBY_HOME, ip.get(GlassfishModule.JRUBY_HOME));
         appendSystemVar(argumentBuf, GlassfishModule.COMET_FLAG, ip.get(GlassfishModule.COMET_FLAG));
 
+        // override the values that are found in the domain.xml file.
+        // this is totally a copy/paste from StartTomcat...
+        if ("true".equals(ip.get(GlassfishModule.USE_IDE_PROXY_FLAG))) { // NOI18N
+            final String[] PROXY_PROPS = {
+                "http.proxyHost",       // NOI18N
+                "http.proxyPort",       // NOI18N
+                "http.nonProxyHosts",   // NOI18N
+                "https.proxyHost",      // NOI18N
+                "https.proxyPort",      // NOI18N
+            };
+            boolean isWindows = Utilities.isWindows();
+            for (String prop : PROXY_PROPS) {
+                String value = System.getProperty(prop);
+                if (value != null && value.trim().length() > 0) {
+                    if (isWindows && "http.nonProxyHosts".equals(prop)) { // NOI18N
+                        // enclose in double quotes to escape the pipes separating the hosts on windows
+                        value = "\"" + value + "\""; // NOI18N
+                    }
+                    argMap.put(prop, value);
+                }
+            }
+        }
+
         argMap.remove(GlassfishModule.JRUBY_HOME);
         argMap.remove(GlassfishModule.COMET_FLAG);
         
-        if(!"false".equals(System.getProperty("glassfish.use.jvm.config"))) {
-            for(Map.Entry<String, String> entry: argMap.entrySet()) {
-                appendSystemVar(argumentBuf, entry.getKey(), entry.getValue());
-            }
+        for(Map.Entry<String, String> entry: argMap.entrySet()) {
+            appendSystemVar(argumentBuf, entry.getKey(), entry.getValue());
         }
         
         return argumentBuf;
@@ -346,25 +556,22 @@ public class StartTask extends BasicTask<OperationState> {
     
     private StringBuilder appendSystemVar(StringBuilder argumentBuf, String key, String value) {
         if(value != null && value.length() > 0) {
-            argumentBuf.append(" -D");
+            argumentBuf.append(" -D"); // NOI18N
             argumentBuf.append(key);
-            argumentBuf.append("=");
-            argumentBuf.append(quote(value));
+            argumentBuf.append("="); // NOI18N
+            argumentBuf.append(Util.quote(value));
         }
         return argumentBuf;
     }
     
-    private Process createProcess() throws IOException {
+    private Process createProcess() throws ProcessCreationException {
         Process process = null;
         NbProcessDescriptor pd = createProcessDescriptor();
         if(pd != null) {
             try {
-                process = pd.exec(null, createEnvironment(), true, new File(
-                        ip.get(GlassfishModule.GLASSFISH_FOLDER_ATTR)));
+                process = pd.exec(null, createEnvironment(), true, getDomainFolder());
             } catch (java.io.IOException ex) {
-                ErrorManager.getDefault().notify(ErrorManager.INFORMATIONAL, ex);
-                fireOperationStateChanged(OperationState.FAILED, 
-                        "MSG_START_SERVER_FAILED_PD"); // NOI18N
+                throw new ProcessCreationException(ex, "MSG_START_SERVER_FAILED_PD", instanceName); // NOI18N
             }
         }
         return process;
@@ -379,142 +586,38 @@ public class StartTask extends BasicTask<OperationState> {
         return ip.get(GlassfishModule.DOMAIN_NAME_ATTR);
     }
     
-    private void readJvmArgs(File domainRoot, List<String> optList, Map<String, String> argMap) {
+    private void readJvmArgs(File domainRoot, List<String> optList, 
+            Map<String, String> argMap, Map<String, String> propMap) {
         Map<String, String> varMap = new HashMap<String, String>();
 
-        varMap.put("com.sun.aas.installRoot", fixPath(ip.get(GlassfishModule.GLASSFISH_FOLDER_ATTR)));
-        varMap.put("com.sun.aas.instanceRoot", fixPath(domainRoot.getAbsolutePath()));
-        varMap.put("com.sun.aas.javaRoot", fixPath(System.getProperty("java.home")));
-        varMap.put("com.sun.aas.derbyRoot", 
-                fixPath(ip.get(GlassfishModule.INSTALL_FOLDER_ATTR) + File.separatorChar + "javadb"));
-        
-        File domainXml = new File(domainRoot, "config/domain.xml");
+        varMap.put("com.sun.aas.installRoot", Util.escapePath(ip.get(GlassfishModule.GLASSFISH_FOLDER_ATTR))); // NOI18N
+        varMap.put("com.sun.aas.instanceRoot", Util.escapePath(domainRoot.getAbsolutePath())); // NOI18N
+        varMap.put("com.sun.aas.javaRoot", Util.escapePath(jdkHome.getPath())); // NOI18N
+        varMap.put("com.sun.aas.derbyRoot", getJavaDBLocation()); // NOI18N
 
-        JvmConfigReader reader = new JvmConfigReader(optList, argMap, varMap);
+        File domainXml = new File(domainRoot, "config/domain.xml"); // NOI18N
+        JvmConfigReader reader = new JvmConfigReader(optList, argMap, varMap, propMap);
         List<TreeParser.Path> pathList = new ArrayList<TreeParser.Path>();
-        pathList.add(new TreeParser.Path("/domain/servers/server", reader.getServerFinder()));
-        pathList.add(new TreeParser.Path("/domain/configs/config", reader.getConfigFinder()));
-        pathList.add(new TreeParser.Path("/domain/configs/config/java-config", reader));
+        pathList.add(new TreeParser.Path("/domain/servers/server", reader.getServerFinder())); // NOI18N
+        pathList.add(new TreeParser.Path("/domain/configs/config", reader.getConfigFinder())); // NOI18N
+        pathList.add(new TreeParser.Path("/domain/configs/config/java-config", reader));  // NOI18N
         try {
             TreeParser.readXml(domainXml, pathList);
         } catch(IllegalStateException ex) {
-            Logger.getLogger("glassfish").log(Level.WARNING, ex.getLocalizedMessage(), ex);
+            Logger.getLogger("glassfish").log(Level.WARNING, ex.getLocalizedMessage(), ex); // NOI18N
         }
     }
 
-    private static final String fixPath(String path) {
-        return path.replace("\\", "\\\\").replace("$", "\\$");
+    private String getJavaDBLocation() {
+        String javadb = ip.get(GlassfishModule.INSTALL_FOLDER_ATTR) + File.separatorChar + "javadb"; // NOI18N
+        if (new File(javadb).exists()) {
+            // V3 Prelude includes javadb as it can run on JDK 5
+            javadb = Util.escapePath(javadb);
+        } else {
+            // V3 uses javadb from JDK 6
+            javadb = Util.escapePath(jdkHome.getPath() + File.separatorChar + "javadb"); // NOI18N
+        }
+        return javadb;
     }
-    
-    private static class JvmConfigReader extends TreeParser.NodeReader {
 
-        private final Map<String, String> argMap;
-        private final Map<String, String> varMap;
-        private final List<String> optList;
-        private final String serverName = "server";
-        private String serverConfigName;
-        private boolean readJvmConfig = false;
-        
-        public JvmConfigReader(List<String> optList, Map<String, String> argMap, Map<String, String> varMap) {
-            this.optList = optList;
-            this.argMap = argMap;
-            this.varMap = varMap;
-        }
-        
-        public TreeParser.NodeReader getServerFinder() {
-            return new TreeParser.NodeReader() {
-                @Override
-                public void readAttributes(String qname, Attributes attributes) throws SAXException {
-//                    <server lb-weight="100" name="server" config-ref="server-config">
-                    if(serverConfigName == null || serverConfigName.length() == 0) {
-                        if(serverName.equals(attributes.getValue("name"))) {
-                            serverConfigName = attributes.getValue("config-ref");
-                            Logger.getLogger("glassfish").finer("DOMAIN.XML: Server profile defined by " + serverConfigName);
-                        }
-                    }
-                }
-            };
-        }
-        
-        public TreeParser.NodeReader getConfigFinder() {
-            return new TreeParser.NodeReader() {
-                @Override
-                public void readAttributes(String qname, Attributes attributes) throws SAXException {
-//                    <config name="server-config" dynamic-reconfiguration-enabled="true">
-                    if(serverConfigName != null && serverConfigName.equals(attributes.getValue("name"))) {
-                        readJvmConfig = true;
-                        Logger.getLogger("glassfish").finer("DOMAIN.XML: Reading JVM options from server profile " + serverConfigName);
-                    }
-                }
-                @Override
-                public void endNode(String qname) throws SAXException {
-                    readJvmConfig = false;
-                }
-            };
-        }
-        
-        @Override
-        public void readCData(String qname, char [] ch, int start, int length) throws SAXException {
-//            <jvm-options>-client</jvm-options>
-//            <jvm-options>-Djava.endorsed.dirs=${com.sun.aas.installRoot}/lib/endorsed</jvm-options>
-            if(readJvmConfig) {
-                String option = new String(ch, start, length);
-                if(option.startsWith("-D")) {
-                    int splitIndex = option.indexOf('=');
-                    if(splitIndex != -1) {
-                        String name = option.substring(2, splitIndex);
-                        String value = doSub(option.substring(splitIndex+1));
-                        if(name.length() > 0) {
-                            Logger.getLogger("glassfish").finer("DOMAIN.XML: argument name = " + name + ", value = " + value);
-                            argMap.put(name, value);
-                        }
-                    }
-                } else if(option.startsWith("-X")) {
-                    option = doSub(option);
-                    int splitIndex = option.indexOf('=');
-                    if(splitIndex != -1) {
-                        String name = option.substring(0, splitIndex);
-                        String value = option.substring(splitIndex+1);
-                        Logger.getLogger("glassfish").finer("DOMAIN.XML: jvm option: " + name + " = " + value);
-                        optList.add(name + '=' + quote(value));
-                    } else {
-                        Logger.getLogger("glassfish").finer("DOMAIN.XML: jvm option: " + option);
-                        optList.add(option);
-                    }
-                }
-            }
-        }
-        
-        private Pattern pattern = Pattern.compile("\\$\\{([^}]+)\\}");
-        
-        private String doSub(String value) {
-            try {
-                Matcher matcher = pattern.matcher(value);
-                boolean result = matcher.find();
-                if(result) {
-                    StringBuffer sb = new StringBuffer(value.length()*2);
-                    do {
-                        String key = matcher.group(1);
-                        String replacement = varMap.get(key);
-                        if(replacement == null) {
-                            replacement = System.getProperty(key);
-                            if(replacement != null) {
-                                replacement = fixPath(replacement);
-                            } else {
-                                replacement = "\\$\\{" + key + "\\}";
-                            }
-                        }
-                        matcher.appendReplacement(sb, replacement);
-                        result = matcher.find();
-                    } while(result);
-                    matcher.appendTail(sb);
-                    value = sb.toString();
-                }
-            } catch(Exception ex) {
-                Logger.getLogger("glassfish").log(Level.INFO, ex.getLocalizedMessage(), ex);
-            }
-            return value;
-        }
-
-    }
 }
